[gd_scene load_steps=77 format=3 uid="uid://cyuep5hu63eox"]

[ext_resource type="PackedScene" uid="uid://d1sly5v33noi4" path="res://segments/village/scenes/village_tile_map.tscn" id="1_y58wj"]
[ext_resource type="Script" path="res://segments/village/scripts/tavern_entry.gd" id="2_do4nr"]
[ext_resource type="PackedScene" uid="uid://on051hxhywix" path="res://segments/village/scenes/tavern_sign.tscn" id="3_u5fvr"]
[ext_resource type="Script" path="res://segments/village/scripts/camera.gd" id="4_eva6u"]
[ext_resource type="Script" path="res://segments/village/scripts/npcs/blacksmith.gd" id="6_yi78f"]
[ext_resource type="Texture2D" uid="uid://bne6lcq72e7lu" path="res://ressources/sprites/blacksmith.png" id="7_nt7c8"]
[ext_resource type="PackedScene" uid="uid://blo8qjf4uqgr7" path="res://segments/village/scenes/npc_dialogue.tscn" id="8_33kxw"]
[ext_resource type="Script" path="res://segments/village/scripts/npcs/phantom.gd" id="9_3fya3"]
[ext_resource type="Texture2D" uid="uid://cyg5aojhn1xuf" path="res://ressources/sprites/phantom/phantom_idle.png" id="10_jpr8v"]
[ext_resource type="Script" path="res://segments/village/scripts/npcs/mayor.gd" id="11_idluf"]
[ext_resource type="Texture2D" uid="uid://c6f4sj7nbfyb8" path="res://ressources/sprites/mayor.png" id="12_qcxda"]
[ext_resource type="Script" path="res://segments/village/scripts/npcs/npc1.gd" id="13_y1dau"]
[ext_resource type="Texture2D" uid="uid://d2mq0btgrpc4x" path="res://ressources/sprites/npc/npc_idle.png" id="14_1os1m"]
[ext_resource type="Texture2D" uid="uid://c34brkdvvt5ol" path="res://ressources/sprites/npc/npc_move.png" id="15_garch"]
[ext_resource type="Script" path="res://segments/village/scripts/npcs/npc2.gd" id="16_ge5x5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24yus"]
size = Vector2(37, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6gfu"]
atlas = ExtResource("7_nt7c8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sgvo"]
atlas = ExtResource("7_nt7c8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qao2b"]
atlas = ExtResource("7_nt7c8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgfcr"]
atlas = ExtResource("7_nt7c8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1446r"]
atlas = ExtResource("7_nt7c8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mparg"]
atlas = ExtResource("7_nt7c8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urv8b"]
atlas = ExtResource("7_nt7c8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3nal"]
atlas = ExtResource("7_nt7c8")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_34ljh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6gfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sgvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qao2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgfcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1446r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mparg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urv8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3nal")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nc3ub"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dcn4v"]
radius = 45.5412

[sub_resource type="AtlasTexture" id="AtlasTexture_i2nt7"]
atlas = ExtResource("10_jpr8v")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjupa"]
atlas = ExtResource("10_jpr8v")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2i0y"]
atlas = ExtResource("10_jpr8v")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd36r"]
atlas = ExtResource("10_jpr8v")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufqa3"]
atlas = ExtResource("10_jpr8v")
region = Rect2(0, 384, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_8edms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2nt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjupa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2i0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd36r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufqa3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3xwye"]
radius = 6.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_735po"]
radius = 67.3647

[sub_resource type="AtlasTexture" id="AtlasTexture_d4vcf"]
atlas = ExtResource("12_qcxda")
region = Rect2(480, 480, 80, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1lmp"]
atlas = ExtResource("12_qcxda")
region = Rect2(560, 480, 80, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_823oi"]
atlas = ExtResource("12_qcxda")
region = Rect2(640, 480, 80, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_ohudm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4vcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1lmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_823oi")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_up3xi"]
radius = 6.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ik1py"]
radius = 59.3043

[sub_resource type="AtlasTexture" id="AtlasTexture_xlfeg"]
atlas = ExtResource("14_1os1m")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xkat"]
atlas = ExtResource("14_1os1m")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_56q47"]
atlas = ExtResource("14_1os1m")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eil0"]
atlas = ExtResource("14_1os1m")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvlf5"]
atlas = ExtResource("14_1os1m")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j6ne"]
atlas = ExtResource("14_1os1m")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwki7"]
atlas = ExtResource("14_1os1m")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6phw"]
atlas = ExtResource("14_1os1m")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s86ui"]
atlas = ExtResource("15_garch")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a70sf"]
atlas = ExtResource("15_garch")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ccgg"]
atlas = ExtResource("15_garch")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5r1c"]
atlas = ExtResource("15_garch")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntbxo"]
atlas = ExtResource("15_garch")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y23tw"]
atlas = ExtResource("15_garch")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3s0e"]
atlas = ExtResource("15_garch")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8bso"]
atlas = ExtResource("15_garch")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_18c74"]
atlas = ExtResource("15_garch")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gnpl"]
atlas = ExtResource("15_garch")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_87w32"]
atlas = ExtResource("15_garch")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2nsk"]
atlas = ExtResource("15_garch")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j154e"]
atlas = ExtResource("15_garch")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd888"]
atlas = ExtResource("15_garch")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kadwp"]
atlas = ExtResource("15_garch")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy4xd"]
atlas = ExtResource("15_garch")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsiwp"]
atlas = ExtResource("15_garch")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6qun"]
atlas = ExtResource("15_garch")
region = Rect2(640, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvttd"]
atlas = ExtResource("15_garch")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rur51"]
atlas = ExtResource("15_garch")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ksr1"]
atlas = ExtResource("15_garch")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj55o"]
atlas = ExtResource("15_garch")
region = Rect2(384, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg51d"]
atlas = ExtResource("15_garch")
region = Rect2(512, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0q3o"]
atlas = ExtResource("15_garch")
region = Rect2(640, 384, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_87cjw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlfeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xkat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56q47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eil0")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvlf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j6ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwki7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6phw")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s86ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a70sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ccgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5r1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntbxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y23tw")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3s0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8bso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18c74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gnpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87w32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2nsk")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j154e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd888")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kadwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy4xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsiwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6qun")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvttd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rur51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ksr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj55o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg51d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0q3o")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mcwr6"]
radius = 6.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jbxmn"]
radius = 48.0

[node name="World" type="Node2D"]

[node name="Village" parent="." instance=ExtResource("1_y58wj")]

[node name="Taverne" type="Node" parent="Village"]
script = ExtResource("2_do4nr")

[node name="TaverneSign" parent="Village/Taverne" instance=ExtResource("3_u5fvr")]
color = Color(0.223065, 0.0851356, 0.0734425, 1)

[node name="TaverneEntry" type="Area2D" parent="Village/Taverne"]

[node name="TaverneEntryRange" type="CollisionShape2D" parent="Village/Taverne/TaverneEntry"]
position = Vector2(63.5, 26)
shape = SubResource("RectangleShape2D_24yus")

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("blacksmith", "phantom", "mayor")]
position = Vector2(0, 20)
zoom = Vector2(3, 3)
script = ExtResource("4_eva6u")
blacksmith = NodePath("../Blacksmith")
phantom = NodePath("../Phantom")
mayor = NodePath("../Mayor")

[node name="Blacksmith" type="CharacterBody2D" parent="."]
position = Vector2(190, 30)
script = ExtResource("6_yi78f")

[node name="BlacksmithSprite" type="AnimatedSprite2D" parent="Blacksmith"]
sprite_frames = SubResource("SpriteFrames_34ljh")
animation = &"idle"
frame_progress = 0.287842

[node name="BlacksmithCollisionBox" type="CollisionShape2D" parent="Blacksmith"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_nc3ub")

[node name="BlacksmithChatArea" type="Area2D" parent="Blacksmith"]

[node name="BlacksmithChatRange" type="CollisionShape2D" parent="Blacksmith/BlacksmithChatArea"]
shape = SubResource("CircleShape2D_dcn4v")

[node name="BlacksmithDialogue" parent="Blacksmith" instance=ExtResource("8_33kxw")]

[node name="Phantom" type="CharacterBody2D" parent="."]
z_index = 3
position = Vector2(-260, 100)
collision_layer = 2
collision_mask = 2
script = ExtResource("9_3fya3")

[node name="PhantomSprite" type="AnimatedSprite2D" parent="Phantom"]
sprite_frames = SubResource("SpriteFrames_8edms")
animation = &"idle"
frame_progress = 0.00882961

[node name="PhantomCollisionBox" type="CollisionShape2D" parent="Phantom"]
position = Vector2(1, -4)
shape = SubResource("CapsuleShape2D_3xwye")

[node name="PhantomChatArea" type="Area2D" parent="Phantom"]

[node name="PhantomChatRange" type="CollisionShape2D" parent="Phantom/PhantomChatArea"]
shape = SubResource("CircleShape2D_735po")

[node name="PhantomDialogue" parent="Phantom" instance=ExtResource("8_33kxw")]
offset_left = 1.0
offset_top = -15.0
offset_right = 41.0
offset_bottom = 25.0

[node name="Mayor" type="CharacterBody2D" parent="."]
position = Vector2(-95, 250)
script = ExtResource("11_idluf")

[node name="MayorSprite" type="AnimatedSprite2D" parent="Mayor"]
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_ohudm")
animation = &"idle"

[node name="MayorCollisionBox" type="CollisionShape2D" parent="Mayor"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_up3xi")

[node name="MayorChatArea" type="Area2D" parent="Mayor"]

[node name="MayorChatRange" type="CollisionShape2D" parent="Mayor/MayorChatArea"]
shape = SubResource("CircleShape2D_ik1py")

[node name="MayorDialogue" parent="Mayor" instance=ExtResource("8_33kxw")]

[node name="NPC1" type="CharacterBody2D" parent="."]
position = Vector2(550, 60)
script = ExtResource("13_y1dau")

[node name="NPC1Sprite" type="AnimatedSprite2D" parent="NPC1"]
sprite_frames = SubResource("SpriteFrames_87cjw")
animation = &"walk_left"

[node name="NPC1Collision" type="CollisionShape2D" parent="NPC1"]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_mcwr6")

[node name="NPC1ChatArea" type="Area2D" parent="NPC1"]

[node name="NPC1ChatRange" type="CollisionShape2D" parent="NPC1/NPC1ChatArea"]
shape = SubResource("CircleShape2D_jbxmn")

[node name="NPC2" type="CharacterBody2D" parent="."]
position = Vector2(90, 250)
script = ExtResource("16_ge5x5")

[node name="NPC2Sprite" type="AnimatedSprite2D" parent="NPC2"]
sprite_frames = SubResource("SpriteFrames_87cjw")
animation = &"walk_up"

[node name="NPC2Collision" type="CollisionShape2D" parent="NPC2"]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_mcwr6")

[node name="NPC2ChatArea" type="Area2D" parent="NPC2"]

[node name="NPC2ChatRange" type="CollisionShape2D" parent="NPC2/NPC2ChatArea"]
shape = SubResource("CircleShape2D_jbxmn")

[connection signal="body_entered" from="Village/Taverne/TaverneEntry" to="Village/Taverne" method="_on_taverne_entry_body_entered"]
[connection signal="body_exited" from="Village/Taverne/TaverneEntry" to="Village/Taverne" method="_on_taverne_entry_body_exited"]
[connection signal="dialogue_finished" from="Blacksmith" to="Camera" method="_on_blacksmith_dialogue_finished"]
[connection signal="dialogue_started" from="Blacksmith" to="Camera" method="_on_blacksmith_dialogue_started"]
[connection signal="body_entered" from="Blacksmith/BlacksmithChatArea" to="Blacksmith" method="_on_blacksmith_chat_area_body_entered"]
[connection signal="body_exited" from="Blacksmith/BlacksmithChatArea" to="Blacksmith" method="_on_blacksmith_chat_area_body_exited"]
[connection signal="dialogue_finished" from="Phantom" to="Camera" method="_on_phantom_dialogue_finished"]
[connection signal="dialogue_started" from="Phantom" to="Camera" method="_on_phantom_dialogue_started"]
[connection signal="body_entered" from="Phantom/PhantomChatArea" to="Phantom" method="_on_phantom_chat_area_body_entered"]
[connection signal="body_exited" from="Phantom/PhantomChatArea" to="Phantom" method="_on_phantom_chat_area_body_exited"]
[connection signal="dialogue_finished" from="Mayor" to="Camera" method="_on_mayor_dialogue_finished"]
[connection signal="dialogue_started" from="Mayor" to="Camera" method="_on_mayor_dialogue_started"]
[connection signal="body_entered" from="Mayor/MayorChatArea" to="Mayor" method="_on_mayor_chat_area_body_entered"]
[connection signal="body_exited" from="Mayor/MayorChatArea" to="Mayor" method="_on_mayor_chat_area_body_exited"]
